--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </div>
 
             <div class="score-container">
-                <h2>Il tuo punteggio:</h2>
+                <h2 id="titolo">Il tuo punteggio:</h2>
                 <h3 id="score">0</h3>
             </div>
 
