feat: restart game on click

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
             <div class="score-container">
                 <h2 id="titolo">Il tuo punteggio:</h2>
-                <h3 id="score">0</h3>
+                <h3 id="score"></h3>
             </div>
 
             <button id="genera-campo">Play</button>
